--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"lint-staged": "^15.2.10",
 		"node-html-parser": "^6.1.13",
 		"prettier": "^3.4.1",
+		"tsx": "^4.19.2",
 		"ts-jest": "^29.2.5",
 		"tsx": "^4.19.2",
 		"turndown": "^7.2.0",
